# chattly

./: pyproject.toml  requirements.txt
chattly/: manage.py
chattly/chat/: consumers.py  routing.py  urls.py  views.py
chattly/chattly/: asgi.py  example.env  settings.py  urls.py  wsgi.py
chattly/templates/: base.html
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.vue  index.css
frontend/src/components/: Button.vue  ChatMessage.vue  JoinForm.vue  PeerStream.vue  ToggleSwitch.vue
frontend/src/router/: index.js
frontend/src/views/: Chatroom.vue  Home.vue
