[tool.poetry]
name = "chattly"
version = "0.1.0"
description = ""
authors = ["bartosz121 <bmagiera121@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.12"
channels = "^3.0.4"
channels-redis = "^3.3.1"
django-environ = "^0.8.1"

[tool.poetry.dev-dependencies]
black = { version = "^21.9b0", allow-prereleases = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
